--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Torrenting so easy even girls can do it" />
-    <title>Torrent aio bot</title>
+    <title>Torrent to Google Drive</title>
+	<link rel="icon" type="image/x-icon" href="//liuji.ml/medias/ico.ico">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,600,700&display=swap" rel="stylesheet" />
     <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
