--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,12 +3,29 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Torrenting so easy even girls can do it" />
-    <title>Torrent aio bot</title>
-	<link rel="icon" type="image/x-icon" href="https://acg-q.github.io/medias/ico.ico">
+    <meta name="description" content="UEHTor is Online Torrent and File Downloading Site. Here You can Download Torrent, Can Download File From Any Server. You can Also Save it on Your Google Drive." />
+    <title>无情的播种机器人🤖</title>
+	<link rel="icon" type="image/x-icon" href="//liuji.ml/medias/ico.ico">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,600,700&display=swap" rel="stylesheet" />
     <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
+    <script>
+	var user1= "六记";
+	var username=prompt('请登录,先生\n用户名:',' ');
+	if (username==user1){
+		var pass1= "六记の机器人";
+		password=prompt('如果你应该在这里,你有密码.请立即输入密码:',' ');
+		if (password==pass1){
+			alert("登陆成功!")
+		}
+		else {
+			window.location="403error";
+		}
+	}
+	else {
+		window.location="403error";
+	}
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
