--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="UEHTor is Online Torrent and File Downloading Site. Here You can Download Torrent, Can Download File From Any Server. You can Also Save it on Your Google Drive." />
+    <meta name="description" content="纯私人产物" />
     <title>无情的播种机器人🤖</title>
 	<link rel="icon" type="image/x-icon" href="//liuji.ml/medias/ico.ico">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,600,700&display=swap" rel="stylesheet" />
@@ -14,7 +14,7 @@
 	var username=prompt('请登录,先生\n用户名:',' ');
 	if (username==user1){
 		var pass1= "六记の机器人";
-		password=prompt('如果你应该在这里,你有密码.请立即输入密码:',' ');
+		password=prompt('如果你已经抵达了这里,那么你就应该有密码.\n请立即输入密码(密码提示：🤖):',' ');
 		if (password==pass1){
 			alert("登陆成功!")
 		}
